# Smart-Order-Routing-ApnaExchange

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_JOURNAL.md  PROGRESS.md  README.md  start_all.py
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/gateway/: config.py  dependencies.py  main.py
backend/gateway/middleware/: auth.py
backend/gateway/routers/: admin.py  auth.py  execution_reports.py  market_data.py  orders.py  risk.py  routing.py  venues.py
backend/gateway/websocket/: ws_manager.py
backend/services/market_data/: aggregator.py  collector.py  mock_venue.py
backend/services/order_state/: order_manager.py
backend/services/risk_engine/: kill_switch.py  position_tracker.py  pre_trade.py
backend/services/routing_engine/: engine.py
backend/services/routing_engine/strategies/: base.py  best_price.py
backend/services/venue_monitor/: health_checker.py
backend/shared/: exceptions.py
backend/shared/events/: event_bus.py
backend/shared/models/: __init__.py  execution_report.py  market_data.py  order.py  risk.py  routing.py  venue.py
backend/shared/utils/: logger.py
diagrams/: README.md
frontend/: README.md  TEAM_GUIDE.md  index.html  package-lock.json  package.json
infra/: README.md
project-info/: ALGORITHMS.md  API_SPECIFICATION.md  ARCHITECTURE.md  BACKEND_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  FRONTEND_GUIDE.md  MILESTONES.md  PROJECT_STRUCTURE.md  README.md
scripts/: README.md
tests/: README.md
venues/: Dockerfile  README.md  TEAM_GUIDE.md  (+2 more)
(+44 files in other folders)
