[project]
name = "apna-exchange-backend"
version = "0.1.0"
description = "Apna Exchange — DEIRCP gateway + platform services"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",  # line-too-long — formatter handles it
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/migrations/*"]
